--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "NEXT_PRIVATE_STANDALONE=true next build",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "eslint"
   },
